适配: Forge 1.15.2 兼容 Java 8 语法与修复区块刷新